# zelda3

./: .gitignore  CMakeLists.txt  README.md  resources.cmake
snes/: ppu.c  ppu.h  snes.c  tracing.c  types.h
tables/: compile_music.py  compile_resources.py  extract_music.py  extract_resources.py
zelda/: ancilla.c  ancilla.h  attract.c  config.c  config.h  dungeon.c  dungeon.h  ending.c  hud.c  hud.h  load_gfx.c  main.c  messaging.c  misc.c  nmi.c  overworld.c  player.c  player_oam.c  select_file.c  spc_player.c  spc_player.h  sprite.c  sprite.h  sprite_main.c  tagalong.c  variables.h  zelda_cpu_infra.c  zelda_cpu_infra.h  zelda_rtl.c  zelda_rtl.h
